# slang

./: .cspell.json  .prettierrc  CONTRIBUTING.md  Cargo.toml  Pipfile  changes.csv  eslint.config.mjs  json.json  package-lock.json  package.json  tsconfig.json  typedoc.sh  wasm-multithreading.md
.cargo/: config.toml
.changeset/: pink-flowers-draw.md  shiny-feet-shop.md  swift-monkeys-destroy.md  tame-tools-walk.md
.devcontainer/: devcontainer.json
.devcontainer/scripts/: .bashrc_devcontainer  .zshrc_devcontainer
.github/: dependabot.yml
.github/workflows/: _jobs_check.yml  _jobs_ci.yml  _jobs_github_pages.yml  _jobs_publish.yml  ci.yml  publish.yml
crates/codegen/ebnf/src/: parser.rs  precedence_parser.rs  scanner.rs  serialization.rs
crates/codegen/generator/src/: lib.rs
crates/codegen/language/internal_macros/: Cargo.toml
crates/codegen/runner/: Cargo.toml
crates/codegen/runner/src/: main.rs  passes.rs
crates/codegen/runtime/cargo/: Cargo.toml  build.rs
crates/codegen/runtime/cargo/crate/: Cargo.toml
crates/codegen/runtime/cargo/crate/src/runtime/: mod.rs
crates/codegen/runtime/cargo/crate/src/runtime/bindings/: mod.rs
crates/codegen/runtime/cargo/crate/src/runtime/compilation/: builder.rs  file.rs  internal_builder.rs  mod.rs  unit.rs
crates/codegen/runtime/cargo/crate/src/runtime/cst/: mod.rs  terminal_kind.rs.jinja2
crates/codegen/runtime/cargo/crate/src/runtime/parser/: parse_output.rs  parser.rs.jinja2
crates/codegen/runtime/cargo/crate/src/runtime/parser/parser_support/: parser_function.rs
crates/codegen/runtime/cargo/crate/src/runtime/utils/: language_facts.rs.jinja2
crates/codegen/runtime/cargo/src/runtime/: kinds.rs.jinja2  mod.rs
crates/codegen/runtime/cargo/src/runtime/wit/: cst.rs  cursor.rs  diagnostic.rs  kinds.rs  language.rs  mod.rs  query.rs  slang.wit.jinja2  text_index.rs
crates/codegen/runtime/cargo/wasm/: Cargo.toml
crates/codegen/runtime/cargo/wasm/src/runtime/interface/: bindings.wit.jinja2  compilation.wit.jinja2  cst.wit.jinja2  parser.wit.jinja2  world.wit.jinja2
crates/codegen/runtime/cargo/wasm/src/runtime/wrappers/: mod.rs
crates/codegen/runtime/cargo/wasm/src/runtime/wrappers/bindings/: mod.rs
crates/codegen/runtime/cargo/wasm/src/runtime/wrappers/compilation/: mod.rs
crates/codegen/runtime/cargo/wasm/src/runtime/wrappers/cst/: mod.rs
crates/codegen/runtime/cargo/wasm/src/runtime/wrappers/parser/: mod.rs
crates/codegen/runtime/cargo/wasm/src/runtime/wrappers/utils/: mod.rs
crates/codegen/runtime/generator/: Cargo.toml
crates/codegen/runtime/node_addon/: Cargo.toml
crates/codegen/runtime/sync/: Cargo.toml  build.rs
crates/codegen/schema/: Cargo.toml  build.rs
crates/codegen/schema/src/: lib.rs  manifest.rs  production.rs
crates/codegen/spec/src/: grammar.rs  lib.rs  reference.rs  snippets.rs
crates/codegen/syntax/src/: char_set.rs  code_generator.rs  combinator_context.rs  combinator_node.rs  combinator_tree.rs  grammar.rs  rust_lib_code_generator.rs  to_parser_code.rs  to_scanner_code.rs  trie.rs  typescript_lib_code_generator.rs
crates/codegen/testing/src/: cst_output.rs  lib.rs
crates/codegen/utils/src/: errors.rs
crates/infra/cli/: Cargo.toml  package.json
crates/infra/cli/src/: extensions.rs  main.rs  utils.rs
crates/infra/utils/: Cargo.toml
crates/infra/utils/src/: lib.rs
crates/infra/utils/src/cargo/: cache.rs  manifest.rs  mod.rs  serde.rs  workspace.rs
crates/infra/utils/src/cargo/public_api_snapshots/: mod.rs  serializer.rs
crates/infra/utils/src/cargo/workspace/: cache.rs  mod.rs  serde.rs
crates/infra/utils/src/codegen/: formatting.rs  mod.rs  read_write.rs  runtime.rs  tera.rs
crates/infra/utils/src/codegen/common/: file_system.rs  formatting.rs
crates/infra/utils/src/commands/: mod.rs
crates/infra/utils/src/errors/: mod.rs
crates/infra/utils/src/github/: mod.rs
crates/infra/utils/src/paths/: extensions.rs  walker.rs
crates/infra/utils/src/perf/: mod.rs
crates/infra/utils/src/terminal/: mod.rs
crates/metaslang/bindings/: README.md
crates/metaslang/bindings/src/: lib.rs
crates/metaslang/cst/: Cargo.toml  README.md
crates/metaslang/cst/src/: cst.rs  kinds.rs  lib.rs  nodes.rs  text_index.rs
crates/metaslang/graph_builder/: Cargo.toml  README.md
crates/metaslang/graph_builder/src/: lib.rs  parser.rs
crates/metaslang/graph_builder/tests/: functions.rs  graph.rs  parser.rs  variables.rs
crates/solidity/inputs/language/: build.rs
crates/solidity/inputs/schema/: Cargo.toml  build.rs
crates/solidity/sync/: Cargo.toml  build.rs
crates/solidity/sync/src/: lib.rs
crates/solidity/testing/perf/: Cargo.toml
crates/solidity/testing/perf/benches/: iai.rs  open_zeppelin_contracts.rs
crates/solidity/testing/perf/benches/common/: mod.rs
crates/solidity/testing/perf/benches/dataset/: mod.rs
crates/solidity/testing/perf/benches/testcases/: list_contracts.rs  mod.rs
crates/solidity/testing/perf/cargo/: Cargo.toml
crates/solidity/testing/perf/cargo/benches/comparison/: main.rs
crates/solidity/testing/perf/cargo/benches/slang/: main.rs
crates/solidity/testing/perf/cargo/benches/slang_v2/: main.rs
crates/solidity/testing/perf/cargo/src/: lib.rs
crates/solidity/testing/perf/reporters/: get_size.rs
crates/solidity/testing/perf/src/: lib.rs
crates/solidity/testing/perf/src/tests/: definitions.rs  init_bindings.rs  references.rs
crates/testlang/outputs/cargo/slang_testlang/: Cargo.toml  build.rs
crates/testlang/sync/: Cargo.toml  build.rs
documentation/public/user-guide/: concepts.md
scripts/: _common.sh  infra.sh
scripts/mkdocs/: watch.sh
scripts/npm/napi/: publish.sh
scripts/solidity/: check-grammar.sh
(+262 files in other folders)
