[package]
name = "infra_utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
cargo-emit = { workspace = true }
itertools = { workspace = true }
globwalk = { workspace = true }
lazy_static = { workspace = true }
owo-colors = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
similar-asserts = { workspace = true }
tera = { workspace = true }
terminal_size = { workspace = true }
toml = { workspace = true }
