[package]
name = "solidity_sync"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[build-dependencies]
anyhow = { workspace = true }
codegen_runtime_generator = { workspace = true }
codegen_runtime_sync = { workspace = true }
codegen_spec = { workspace = true }
codegen_testing = { workspace = true }
infra_utils = { workspace = true }
rayon = { workspace = true }
solidity_language = { workspace = true }

[lints]
workspace = true
