[package]
name = "testlang_sync"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[build-dependencies]
anyhow = { workspace = true }
codegen_runtime_generator = { workspace = true }
codegen_runtime_sync = { workspace = true }
infra_utils = { workspace = true }
rayon = { workspace = true }
testlang_language = { workspace = true }

[lints]
workspace = true
