[package]
name = "codegen_runtime_cargo"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

description = "Cargo runtime copied over by codegen"

[build-dependencies]
anyhow = { workspace = true }
codegen_runtime_generator = { workspace = true }

[dependencies]
ariadne = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
metaslang_cst = { workspace = true }
metaslang_graph_builder = { workspace = true, optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

# __RUST_PRODUCT_CRATE_FEATURES__ (keep in sync)
[features]
default = ["cli"]
cli = ["dep:ariadne", "dep:clap", "dep:serde_json"]
__private_testing_utils = ["dep:ariadne"]
__experimental_bindings_api = ["dep:metaslang_graph_builder"]

[lints]
workspace = true
