[package]
name = "codegen_runtime_sync"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[build-dependencies]
anyhow = { workspace = true }
codegen_runtime_generator = { workspace = true }
infra_utils = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
