[package]
name = "solidity_testing_perf"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
iai-callgrind = { workspace = true }
slang_solidity = { workspace = true }

[[bench]]
name = "open_zeppelin_contracts"
harness = false

[lints]
workspace = true
