[package]
name = "solidity_testing_perf"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
infra_utils = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
slang_solidity = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }

[dev-dependencies]
iai-callgrind = { workspace = true }
slang_solidity = { workspace = true }

[[bench]]
name = "iai"
harness = false

[lints]
workspace = true
