[package]
name = "solidity_testing_perf"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
get-size = { workspace = true }
iai-callgrind = { workspace = true }
infra_utils = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slang_solidity = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }

[[bench]]
name = "iai"
harness = false

[[bin]]
name = "solidity_testing_perf_get_size_reporter"
path = "reporters/get_size.rs"

[lints]
workspace = true
